--- a/.github/codeql/codeql-config.yaml
+++ b/.github/codeql/codeql-config.yaml
@@ -2,5 +2,5 @@ name: "My CodeQL config"
 
 disable-default-queries: true
 
-queries:
-  - uses: knewbury01/java-crypto-newmodel-queries
+packs:
+  - knewbury01/java-crypto-newmodel-queries
