--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -138,6 +138,9 @@ jobs:
     strategy:
       fail-fast: false
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Download CodeQL database
         uses: actions/download-artifact@v4
         with:
