--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -150,7 +150,7 @@ jobs:
       - name: Unzip CodeQL database
         run: |
           ls /home/runner/work/_temp/codeql_databases
-          unzip /home/runner/work/_temp/codeql_databases/*.zip -d java
+          unzip /home/runner/work/_temp/codeql_databases/*.zip
 
       - name: Setup Python
         uses: actions/setup-python@v5
