--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -187,6 +187,8 @@ jobs:
           echo -e "Checking database path:"
           ls $DATABASE_PATH
           ls home/runner/work/_temp/codeql_databases/java
+          echo -e "Installing pack:"
+          $QLT_CODEQL_PATH pack download knewbury01/java-crypto-newmodel-queries
           echo "-----------------------------"
           python3 scripts/generate_cbom.py -c "$QLT_CODEQL_PATH" -d "$DATABASE_PATH" -q "$QUERY_FILE" -o "$OUTPUT_DIR"
 
